Add work with results
Add 1)basic handlers; 2)service layer; 3)report builder; 4) prepare csv file; 5) results tables in database
